PN-3013 eliminato code smell